--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 
 #body{
 background-color:  rgb(248,249,250);;
@@ -192,7 +196,6 @@ z-index: 999;
   overflow: hidden;
   object-fit: fill;
 }
-
 
 /* -FOOTER- */
 
